<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:padding="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".Log">


    <ImageView
        android:id="@+id/person"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:hapticFeedbackEnabled="false"
        android:background="@drawable/user"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/username"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/forget_username_or_password"
        android:textColor="#0000FF" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/forget"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#0000FF"
        android:text="@string/login"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="70dp"
        android:text="@string/sign_up_for_free"
        android:textColor="#0000FF"
        android:textSize="20sp" />


</RelativeLayout>